# hslibvoyeur

./: .gitmodules  LICENSE  README.md  Setup.hs  changelog  hslibvoyeur.cabal  voyeur.cabal
examples/: Watch.hs
src/System/Process/: Voyeur.hs
src/System/Process/Voyeur/: FFI.hs
