name:                hslibvoyeur
version:             0.1.0.0
synopsis:            Haskell bindings for libvoyeur
description:         Haskell bindings for libvoyeur, a library for observing the private
                     activities of child processes.
homepage:            https://github.com/sethfowler/hslibvoyeur
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler <mark.seth.fowler@gmail.com>
maintainer:          Seth Fowler <mark.seth.fowler@gmail.com>
copyright:           Copyright (C) 2014 Seth Fowler
category:            System
build-type:          Custom
cabal-version:       >= 1.20
data-files:          libvoyeur/build/*.dylib

flag build-example
  description:         Builds an example program
  default:             False

library
  ghc-options:         -Wall -O
  exposed-modules:     System.Process.Voyeur
  other-modules:       System.Process.Voyeur.FFI,
                       Paths_hslibvoyeur
  build-depends:       base >=4.6 && <4.8,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.3 && <1.4,
                       process >=1.1 && <1.3,
                       utf8-string >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP

executable voyeur-watch
  if !flag(build-example)
    buildable:         False

  ghc-options:         -Wall -O
  hs-source-dirs:      examples
  main-is:             Watch.hs
  build-depends:       base >=4.6 && <4.8,
                       hslibvoyeur,
                       process >=1.1 && <1.3
  default-language:    Haskell2010
