name:                voyeur
version:             0.1.0.0
synopsis:            Haskell bindings for libvoyeur
description:         Haskell bindings for libvoyeur, a library for observing the private
                     activities of child processes.
homepage:            https://github.com/sethfowler/hslibvoyeur
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler <mark.seth.fowler@gmail.com>
maintainer:          Seth Fowler <mark.seth.fowler@gmail.com>
copyright:           Copyright (C) 2014 Seth Fowler
category:            System
build-type:          Custom
cabal-version:       >= 1.20
data-files:          libvoyeur/build/*.dylib

library
  ghc-options:         -Wall -O
  exposed-modules:     System.Process.Voyeur
  other-modules:       System.Process.Voyeur.FFI,
                       Paths_voyeur
  build-depends:       base >=4.6 && <4.8,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.3 && <1.4,
                       process >=1.1 && <1.3,
                       utf8-string >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP
